# virtual-contributor

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  clarifications.md  docker-compose.yaml  main.py  plan.md  pyproject.toml  pyrightconfig.json  spec.md  tasks.md
.claude/: settings.json
.claude/agents/: sdd-story-worker.md  sdd-triage-worker.md
.claude/commands/: sdd-epic.md  sdd-triage.md  speckit.retrospec.md
.claude/hooks/: schedule-triage.sh
.github/workflows/: build.yml  ci.yml  deploy-dev.yml  release.yml
.specify/memory/: constitution.md
core/: config.py  container.py  health.py  logging.py  provider_factory.py  registry.py  router.py
core/adapters/: chromadb.py  langchain_llm.py  mistral.py  openai_assistant.py  openai_compatible_embeddings.py  openai_embeddings.py  openai_llm.py  rabbitmq.py  scaleway_embeddings.py
core/domain/: ingest_pipeline.py  prompt_graph.py  summarize_graph.py
core/events/: __init__.py  base.py  ingest_space.py  ingest_website.py  input.py  response.py
core/ports/: __init__.py  embeddings.py  knowledge_store.py  llm.py  transport.py
docs/: PRD.md
docs/adr/: 0001-microkernel-hexagonal-architecture.md  (+11 more)
evaluation/: __init__.py  __main__.py  cli.py  dataset.py  generator.py  metrics.py  pipeline_invoker.py  report.py  runner.py  tracing.py
tests/: conftest.py  test_config_pipeline_timeout.py  test_config_retrieval.py  test_config_summarize_enabled.py  test_config_summarize_llm.py  test_context_budget.py  test_pipeline_timeout.py  test_summarize_threshold.py
(+363 files in other folders)
